[gd_scene load_steps=5 format=3 uid="uid://bwqmvies4k68v"]

[ext_resource type="Script" path="res://HUD.gd" id="1_mnfvv"]
[ext_resource type="Texture2D" uid="uid://cbslrgw4p8y3o" path="res://2D/boid.PNG" id="2_q6ryp"]
[ext_resource type="PackedScene" path="res://2D/Scene2D.tscn" id="3_35tbf"]
[ext_resource type="Texture2D" uid="uid://cghb3kxrjf3rf" path="res://3D/boid3D.PNG" id="3_ry83o"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_mnfvv")

[node name="TabBar" type="TabBar" parent="."]
offset_right = 98.0
offset_bottom = 40.0
clip_tabs = false
tab_count = 2
tab_0/title = "2D"
tab_0/icon = ExtResource("2_q6ryp")
tab_1/title = "3D"
tab_1/icon = ExtResource("3_ry83o")

[node name="Scene2D" parent="." instance=ExtResource("3_35tbf")]

[node name="Cohesion" type="CheckBox" parent="."]
offset_top = 40.0
offset_right = 121.0
offset_bottom = 71.0
button_pressed = true
text = "Q: Cohesion"

[node name="Separation" type="CheckBox" parent="."]
offset_top = 71.0
offset_right = 136.0
offset_bottom = 102.0
button_pressed = true
text = "W: Separation"

[node name="Alignment" type="CheckBox" parent="."]
offset_top = 102.0
offset_right = 129.0
offset_bottom = 133.0
button_pressed = true
text = "E: Alignment"

[node name="Perching" type="CheckBox" parent="."]
offset_top = 133.0
offset_right = 129.0
offset_bottom = 164.0
button_pressed = true
text = "R: Perching"

[node name="ToggleLabel" type="Label" parent="."]
offset_left = 124.0
offset_top = 9.0
offset_right = 245.0
offset_bottom = 35.0
text = "T: Toggle 2D/3D"

[node name="HintLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Click to spawn Boids"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="tab_changed" from="TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="mouse_entered" from="Cohesion" to="." method="_on_cohesion_mouse_entered"]
[connection signal="mouse_exited" from="Cohesion" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Cohesion" to="." method="_on_cohesion_toggled"]
[connection signal="mouse_entered" from="Separation" to="." method="_on_separation_mouse_entered"]
[connection signal="toggled" from="Separation" to="." method="_on_separation_toggled"]
[connection signal="mouse_entered" from="Alignment" to="." method="_on_alignment_mouse_entered"]
[connection signal="mouse_exited" from="Alignment" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Alignment" to="." method="_on_alignment_toggled"]
[connection signal="mouse_entered" from="Perching" to="." method="_on_perching_mouse_entered"]
[connection signal="mouse_exited" from="Perching" to="." method="_on_mouse_exited"]
[connection signal="toggled" from="Perching" to="." method="_on_perching_toggled"]
